objects/APTS_Score_Mappings__c.object
<CustomObject>
    <fields>
        <fullName>APTS_P_Avg__c</fullName>
        <label>P - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_High__c</fullName>
        <label>P - High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_Low__c</fullName>
        <label>P - Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_Value__c</fullName>
        <label>P - Value</label>
        <referenceTo>APTS_P_Values__c</referenceTo>
        <relationshipLabel>Score Mapping</relationshipLabel>
        <relationshipName>Score_Mapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Score__c</fullName>
        <label>Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Score Mapping</label>
    <nameField>
        <displayFormat>SCM-{00000}</displayFormat>
        <label>Score Mappings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>